fix(style): overflow of code table cells

--- a/src/shared/stylesheets/components/_article.scss
+++ b/src/shared/stylesheets/components/_article.scss
@@ -95,6 +95,11 @@
     table-layout: fixed;
   }
 
+  th,
+  td {
+    word-break: break-all;
+  }
+
   blockquote p {
     margin-bottom: 12px;
 
